Bug 1839174 - Fix non-unified build compilation error r=jolin

Differential Revision: https://phabricator.services.mozilla.com/D181384